# cpp-lang

./: .clang-format  .clang-format.bak  .clangd  .gitignore  Random.h  Student.cpp  Student.hpp  a.out  abbreviated-function-template.cpp  add.cpp  add.h  avoid-unsigned-integers.cpp  benchmark.cpp  calculator-with-error-checking.cpp  circle.h  conditional-operator.cpp  constants.h  consteval-functions.cpp  constexpr-functions.cpp  constexpr.cpp  cppref-sample.cpp  directives  directives.cpp  double.cpp  external-linkage.cpp  fallthrough.cpp  fixed-width-integers.cpp  floating-point-cmp.cpp  foo.cpp  for-loop-multiple-counters.cpp  function-templates.cpp  global-constants-as-inline-variables.cpp  goto.cpp  growth.h  header-guards.cpp  how-to-design-program.md  hw-modulo.cpp  inline-namespaces.cpp  int8_t-treated-as-char.cpp  integral-loops.cpp  (+42 more)
chess/: Board.hpp  Game.hpp  Move.hpp  Piece.hpp  Player.hpp  Position.hpp  class-diagrams.md  learn.md  srs.md  stories.md
cmake-3.28.1-tutorial-source/Step1/: CMakeLists.txt  tutorial.cxx
cmake-3.28.1-tutorial-source/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
codewars/: centuryFromYear.cpp  countSheep.cpp  even_or_odd.cpp  summation.cpp
connect-four/: CMakeLists.txt
connect-four/include/: Game.hpp  Grid.hpp  Player.hpp
connect-four/src/: Game.cpp  Grid.cpp  PieceColor.cpp  Player.cpp  main.cpp
crazy-eights/: specifications.md
pong/: CMakeLists.txt
pong/src/: Ball.cpp  Paddle.cpp  Vec2.cpp  main.cpp
roguelike/: CMakeLists.txt  build.sh
roguelike/.cache/clangd/index/: Person.cpp.31AA325BA009635D.idx  Person.hpp.1CA211A73093CD54.idx  main.cpp.FBA2BB459754C4A5.idx
roguelike/include/: Person.hpp
roguelike/src/: Person.cpp  main.cpp
tm/: CMakeLists.txt  build.sh
tm/include/: turing_machine.h
tm/source/: turing_machine.cpp  turing_machine.h
tm/src/: main.cpp  turing_machine.cpp
workers/: .clang-format  CMakeLists.txt  build.sh
workers/include/: work_hours_register.hpp  work_hours_register_impl.hpp
workers/src/: work_hours_register_impl.cpp
